# tetrika-junior-tests

./: .gitignore  README.md  pyproject.toml  pytest.ini
task1/: exercise  solution.py
task2/: beasts.csv  exercise  solution.py
task3/: exercise  solution.py
tests/: test_task1.py  test_task2.py  test_task3.py
